--- a/less/global.less
+++ b/less/global.less
@@ -11,6 +11,13 @@ html,
 body {
     font-family: "Ubuntu", sans-serif;
     color: @main-font-color;
+    margin-top: 10%;
+    background-color: whitesmoke;
+    opacity: 0.9;
+
+    @media @phone {
+        margin-top: 0%;
+    }
 }
 
 h1,
